--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,17 @@
             <version>2.7.0</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.12.1.GA</version>
+        </dependency>
+
 
     </dependencies>
 
